# verus-proof-time-testing

./: .gitignore  Cargo.toml  README.md
benches/: bench_set_x.rs
rust_verify_test/: Cargo.toml  rust-toolchain.toml
rust_verify_test/tests/: prove_me.rs  prove_set_x.rs
rust_verify_test/tests/common/: mod.rs
scripts/: walkthesteps.sh
src/: .#set_x.rs  lib.rs  minmax.rs  set_x.rs
tests/: test_minmax.rs  test_set_x.rs
