[package]
name = "verus_proof_time_testing"
version = "0.1.0"
edition = "2024"

[package.metadata.verus]
verify = true

[dependencies]
vstd = { version = "0.0.0-2025-08-12-1837", features = ["alloc", "std"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "test_minmax"
path = "tests/test_minmax.rs"

[[test]]
name = "test_set_x"
path = "tests/test_set_x.rs"

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)', 'cfg(verus_keep_ghost_body)'] }

[workspace]
members = ["."]

# Use local Verus for vstd
[patch.crates-io]
vstd = { path = "/home/milnes/projects/verus-lang/source/vstd" }
