[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dev-dependencies]
rust_verify_test_macros = { path = "/home/milnes/projects/verus-lang/source/rust_verify_test_macros" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
yansi = "0.5"

[package.metadata.rust-analyzer]
rustc_private = true

